--- a/PracticasClases/14SSR/crudssr/views/index.hbs
+++ b/PracticasClases/14SSR/crudssr/views/index.hbs
@@ -15,9 +15,9 @@
             {{#each productos}}
 
             <tr>
-                <td>{{this.Nombre}}</td>
-                <td>{{this.Precio}}</td>
-                <td>{{this.Costo}}</td>
+                <td>{{this.nombre}}</td>
+                <td>{{this.precio}}</td>
+                <td>{{this.costo}}</td>
                 <td> <a href="/producto/modificar/{{this._id}}">Modificar</a></td>
                 <td> <a href="/producto/eliminar/{{this._id}}">Eliminar</a></td>
             </tr>
