--- a/PracticasClases/14SSR/crudssr/views/productoForm.hbs
+++ b/PracticasClases/14SSR/crudssr/views/productoForm.hbs
@@ -1,34 +1,33 @@
 <div class="container">
 
     <form action="/productoForm/producto/operar" method="post">
+        <input type="hidden" name="_id" id="_id" value="{{producto._id}}">
         <div class="form-group">
-            <input type="hidden" name="_id" value="{{producto_id}}">
             <label for="nombre">Nombre</label>
             <input type="text" class="form-control" id="nombre" name="nombre" value="{{producto.nombre}}">
         </div>
 
         <div class="form-group">
             <label for="precio">Precio</label>
-            <input type="text" class="form-control" id="precio" name="precio" value="{{producto.nombre}}">
+            <input type="text" class="form-control" id="precio" name="precio" value="{{producto.precio}}">
         </div>
 
         <div class="form-group">
             <label for="costo">Costo</label>
-            <input type="text" class="form-control" id="costo" name="costo" value="{{producto.nombre}}">
+            <input type="text" class="form-control" id="costo" name="costo" value="{{producto.costo}}">
         </div>
 
         <div class="form-group">
             <label for="minimo">Mínimo</label>
-            <input type="text" class="form-control" id="minimo" name="minimo" value="{{producto.nombre}}">
+            <input type="text" class="form-control" id="minimo" name="minimo" value="{{producto.minimo}}">
         </div>
 
         <div class="form-group">
             <label for="stock">Stock</label>
-            <input type="text" class="form-control" id="stock" name="stock" value="{{producto.nombre}}">
+            <input type="text" class="form-control" id="stock" name="stock" value="{{producto.stock}}">
         </div>
-        <button type="submit" class="btn btn-danger">Cancelar</button>
-        <a href="/" class="form-control"></a>
-
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a href="/" class="btn btn-danger">Volver</a>
 
     </form>
 </div>
